# Complete_Efficiency_Rating

./: .gitignore  pyproject.toml
src/ratingsystems/cer/: __init__.py  __main__.py  predictor.py  rating_system.py
src/ratingsystems/cer/engine/basketball/: __init__.py  basketball.py
src/ratingsystems/cer/engine/football/: drive.py
src/ratingsystems/cer/engine/football/play/: playcall.py  scoring.py  turnover.py  yards.py
src/ratingsystems/cer/model/: __init__.py  field_position.py  play.py  possession.py  probability_space.py  stat.py  team.py
src/ratingsystems/cer/model/util/: __init__.py  filters.py
src/ratingsystems/cer/util/: profile.py
src/ratingsystems_cer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
