[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ratingsystems-cer"
version = "0.1.0"
dependencies = [
    "ratingsystems~=0.0",
]
requires-python = ">=3.11"
authors = []
maintainers = []
description = "Library for the Complete Efficiency Rating System"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["ratingsystems.cer*"]

[project.entry-points.ratingsystems]
predictor = "ratingsystems.cer:CompleteEfficiencyRatingPredictor"
rating_system = "ratingsystems.cer:CompleteEfficiencyRatingSystem"